WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254933
More build fixes for ANGLE on embedded platforms
https://bugs.webkit.org/show_bug.cgi?id=254933
Summary
More build fixes for ANGLE on embedded platforms
Dean Jackson
Reported
2023-04-03 12:09:34 PDT
The change
https://commits.webkit.org/262190@main
attempted to fix a build issue on watchOS, but uncovered many more issues.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-03 12:09:58 PDT
<
rdar://problem/107570491
>
Dean Jackson
Comment 2
2023-04-03 12:15:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12330
EWS
Comment 3
2023-04-05 14:35:53 PDT
Committed
262636@main
(4b5b02b50968): <
https://commits.webkit.org/262636@main
> Reviewed commits have been landed. Closing PR #12330 and removing active labels.
Kimmo Kinnunen
Comment 4
2023-04-06 04:03:30 PDT
Upstreaming this in
https://bugs.chromium.org/p/angleproject/issues/detail?id=8121
with a bit different naming.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug