Source/ThirdParty/ANGLE/src/gpu_info_util/SystemInfo_ios.cpp
@@ -8,7 +8,7 @@
 
 #include "common/platform.h"
 
-#if defined(ANGLE_PLATFORM_IOS) || (defined(ANGLE_PLATFORM_MACCATALYST) && defined(ANGLE_CPU_ARM64))
+#if defined(ANGLE_PLATFORM_APPLE_EMBEDDED) || (defined(ANGLE_PLATFORM_MACCATALYST) && defined(ANGLE_CPU_ARM64))
 
 #    include "gpu_info_util/SystemInfo_internal.h"
 
@@ -30,5 +30,5 @@ bool GetSystemInfo_ios(SystemInfo *info)
 
 }  // namespace angle
 
-#endif  // defined(ANGLE_PLATFORM_IOS) || (defined(ANGLE_PLATFORM_MACCATALYST) &&
-        // defined(ANGLE_CPU_ARM64))
+#endif  // defined(ANGLE_PLATFORM_APPLE_EMBEDDED) ||
+        // (defined(ANGLE_PLATFORM_MACCATALYST) && defined(ANGLE_CPU_ARM64))
